# EPML-ITMO

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  index.html  metrics.json  mkdocs.yml  objects.inv  params.yaml  pyproject.cookiecutter.bak  pyproject.toml
.dvc/: config
.github/workflows/: docs.yml
api/: index.html
configs/model/: gradient_boosting.yaml  logreg.yaml  random_forest.yaml
configs/train/: base.yaml
deployment/: index.html
docs/: deployment.md  hw5_report.md  index.md  report.md  reproducibility.md  usage.md
docs/api/: index.md
docs/experiments/: .gitignore  index.md
experiments/: index.html
experiments/experiments/: index.html
hw5_report/: index.html
notebooks/: solution.ipynb
reference/SUMMARY/: index.html
reference/wine_predictor/clearml_utils/: index.html
reference/wine_predictor/config/: index.html
reference/wine_predictor/dataset/: index.html
reference/wine_predictor/experiments/: index.html
reference/wine_predictor/features/: index.html
reference/wine_predictor/mlflow_utils/: index.html
reference/wine_predictor/modeling/predict/: index.html
reference/wine_predictor/modeling/train/: index.html
reference/wine_predictor/pipelines/clearml_pipeline/: index.html
reference/wine_predictor/pipelines/evaluate/: index.html
reference/wine_predictor/pipelines/notify/: index.html
reference/wine_predictor/reporting/generate_experiment_report/: index.html
reports/: report.md
reproducibility/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
usage/: index.html
wine_predictor/: __init__.py  clearml_utils.py  config.py  dataset.py  experiments.py  features.py  mlflow_utils.py  plots.py
wine_predictor/modeling/: predict.py  train.py
wine_predictor/pipelines/: clearml_pipeline.py  evaluate.py  notify.py
wine_predictor/reporting/: generate_experiment_report.py
