[project]
name = "wine-predictor"
version = "0.1.0"
description = "EPML ITMO practice"
authors = [
    {name = "Aleksander Kragin",email = "aleksander.kragin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [
    { include = "wine_predictor" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "bandit (>=1.9.2,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]
