[project]
name = "wine-predictor"
version = "0.1.0"
description = "EPML ITMO practice"
authors = [
    {name = "Aleksander Kragin",email = "aleksander.kragin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [
    { include = "wine_predictor" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "bandit (>=1.9.2,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = ["data", "models", "notebooks", ".venv"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
skip = ["data", "models", "notebooks", ".venv"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-select = ["I"]
exclude = ["data", "models", "notebooks", ".venv"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
exclude = "data|models|notebooks|.venv"

[tool.bandit]
skips = ["B101"]

